# draco-oxide

./: .gitignore  Cargo.toml  KNOWN_ISSUES.md  README.md  catalog-info.yaml
.github/workflows/: ci.yml
analyzer/src/: main.rs
cli/src/: main.rs
conformance/: Cargo.toml  README.md
conformance/benches/: codec.rs
conformance/src/: lib.rs
conformance/tests/: byte_identity.rs  interop.rs  perf.rs  roundtrip.rs  size_parity.rs
docs/audit/2026-06-17-google-parity/: 00-synthesis.md  01-connectivity-mesh.md  02-attribute-prediction.md  03-entropy-quantization.md  04-pointcloud-metadata-animation.md  05-io-gltf-scene-api.md  06-scheme-selection-fix.md  07-byte-identity-roadmap.md  08-valence-traversal-plan.md  09-perf-profile-bunny.md  10-normal-byte-identity-plan.md
draco-oxide/: Cargo.toml  build.rs
draco-oxide/examples/: diff_against_google.rs  dump_encoded.rs  gltf.rs  obj.rs
draco-oxide/macros/draco-nd-vector/src/: lib.rs
draco-oxide/src/: eval.rs  lib.rs
draco-oxide/src/core/: bit_coder.rs  material.rs  mod.rs  shared.rs  structural_metadata.rs  texture.rs
draco-oxide/src/core/attribute/: mod.rs
draco-oxide/src/core/buffer/: attribute.rs  mod.rs
draco-oxide/src/core/corner_table/: all_inclusive_corner_table.rs  attribute_corner_table.rs  mod.rs
draco-oxide/src/core/mesh/: builder.rs  meh_features.rs  metadata.rs  mod.rs
draco-oxide/src/core/scene/: mod.rs
draco-oxide/src/decode/: mod.rs
draco-oxide/src/decode/attribute/: mod.rs
draco-oxide/src/decode/attribute/inverse_prediction_transform/: mod.rs
draco-oxide/src/decode/attribute/portabilization/: dequantization_coordinate_wise.rs  mod.rs  to_bits.rs
draco-oxide/src/decode/connectivity/: attribute_corner_table.rs  corner_table.rs  edgebreaker.rs  mod.rs
draco-oxide/src/decode/entropy/: mod.rs  rans.rs  symbol_coding.rs
draco-oxide/src/decode/header/: mod.rs
draco-oxide/src/decode/metadata/: mod.rs
draco-oxide/src/encode/: mod.rs
draco-oxide/src/encode/attribute/: attribute_encoder.rs  mod.rs
draco-oxide/src/encode/attribute/portabilization/: mod.rs  octahedral_quantization.rs  quantization_coordinate_wise.rs  to_bits.rs
draco-oxide/src/encode/attribute/prediction_transform/: difference.rs  geom.rs  mod.rs  oct_orthogonal.rs  oct_reflection.rs  orthogonal.rs  wrapped_difference.rs
draco-oxide/src/encode/connectivity/: edgebreaker.rs  mod.rs  sequential.rs
draco-oxide/src/encode/entropy/: mod.rs  rans.rs  symbol_coding.rs
draco-oxide/src/encode/header/: mod.rs
draco-oxide/src/encode/metadata/: mod.rs
draco-oxide/src/io/: mod.rs  texture_io.rs
draco-oxide/src/io/gltf/: buffer_builder.rs  decode.rs  draco_decoder.rs  draco_extension.rs  geometry_extractor.rs  glb.rs  mod.rs  transcoder.rs
draco-oxide/src/shared/: mod.rs
draco-oxide/src/shared/attribute/: mod.rs  octahedron_toolbox.rs  sequence.rs
draco-oxide/src/shared/attribute/prediction_scheme/: delta_prediction.rs  derivative_prediction.rs  mesh_multi_parallelogram_prediction.rs  mesh_normal_prediction.rs  mesh_parallelogram_prediction.rs  mesh_prediction_for_texture_coordinates.rs  mod.rs
draco-oxide/src/shared/connectivity/: eq.rs  mod.rs  sequential.rs
draco-oxide/src/shared/connectivity/edgebreaker/: mod.rs  symbol_encoder.rs
draco-oxide/src/shared/entropy/: mod.rs
draco-oxide/src/utils/: bit_coder.rs  debug.rs  geom.rs  mod.rs
draco-oxide/tests/: compatibility.rs  encode_byte_stability.rs  explicit_quantization.rs  google_compat.rs  integrated_tests.rs  round_trip.rs
draco-oxide/tests/data/b3dm/: skyline_mesh_1252.b3dm
draco-oxide/tests/data/google_fixtures/: bunny_pos_cl7.drc  sphere_full_cl7.drc  sphere_pos_cl7.drc  tetrahedron_pos_cl7.drc  torus_pos_cl7.drc
draco-oxide/tests/eval/: mod.rs
